k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: mediatron.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: rest-api
                port:
                  number: 8080
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: rest-api
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: rest-api
                port:
                  number: 8080
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: rest-api
                port:
                  number: 8080
